# bookphoto_split

./: .env.example  .gitignore  AGENTS.md  README.md  paddle-requirements.txt  pyproject.toml  requirements-frontend.txt  requirements.txt
docs/: training_notes.md
output/: inventory_result.json
scripts/: auto_crop_annotations.py  auto_sam_annotate.py  auto_sam_annotate_v2.py  crop_from_labelme.py  crop_from_yolo.py  crop_spines.py  crop_spines_from_labelme.py  labelme_book.py  labelme_json_to_yolo.py  labelme_to_yolo.py  labelme_to_yolo_v2.py  sam_annotate.py  visualize_annotations.py
scripts/annotate/: labelme.py  sam.py  visualize.py
scripts/api/: server.py
scripts/api_ocr/: ocr_pipeline.py
scripts/count/: inventory.py
scripts/gui/: app.py  backend.py  client.py
scripts/infer/: crop_from_predict.py  predict.py
scripts/match/: build_keyword_index.py  clean_catalog.py  create_ground_truth.py  eval_holdout.py  inventory.py
scripts/ocr/: paddle_cli.py  paddle_ocr_cli.py  paddle_ocr_pipeline.py  paddle_pipeline.py  qwen_pipeline.py
scripts/prepare/: crop_spines.py  to_yolo.py
scripts/utils/: crop.py  paths.py
